# densigrav

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  project.yaml  project_lack.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: custom.md
cache/: dem_clipped.tif  dem_clipped_tc.tif.aux.xml  gravity_points.gpkg  points_with_z.gpkg
data/: gravity_points.csv  section_line.gpkg
results/: points_cba.gpkg
results/2d/section_A/: fit.csv  init_model.yaml  profile.csv  section_points.gpkg
scripts/: plot_talwani_model.py
src/densigrav/: cli.py  cli_obs.py
src/densigrav/io/: dem.py  gravity_points.py
src/densigrav/preprocess/: gridding.py  regional.py  step1_cba.py
src/densigrav/project/: io.py  schema.py
src/densigrav/section/: __init__.py  profile.py  talwani2d.py  talwani_io.py  talwani_quickinv.py
tests/: helpers.py  test_cli.py  test_dem_prepare.py  test_issue06_grids_regional.py  test_issue07_section_talwani.py  test_issue08_talwani_io_polygon.py  test_points_ingest.py  test_preprocess_step1.py  test_project_validate.py
